@@ -3,6 +3,7 @@ Integrated online PIN database for "known WPS PINs attack" (reaver and bully)
 Zhao Chunsheng algorithm integrated (computepin)
 Stefan Viehböck algorithm integrated (easybox)
 Some language strings changed
+Fixed bug showing selected charset for hashcat v3.0 on bruteforce offline decrypt attack
 
 5.01
 WPS bruteforce PIN attacks (reaver and bully)
